Adjusting display sizes

--- a/popup.html
+++ b/popup.html
@@ -16,23 +16,21 @@
     <div class="container">
         <div class="pb-3 pt-1">
             <div class="row">
-                <h1 class="display-2 d-flex justify-content-center" id="game-name"></h1>
+                <h1 class="d-flex justify-content-center game-name" id="game-name"></h1>
             </div>
         </div>
-        <div class="row" id="game-img">
-            <img id="game-img-src" alt="Game Image">
-        </div>
-        <div class="row px-5 pt-1">
-            <div class="col-6 px-3">
+        <div class="row">
+            <div class="col-6">
+                <img id="game-img-src" alt="Game Image">
+            </div>
+            <div class="col-6">
                 <div class="row display-7 d-flex justify-content-center">Weight</div>
                 <div class="row display-7 d-flex justify-content-center" id="weight-value"></div>
-            </div>
-            <div class="col-6 px-3">
-                <div class="row display-7 d-flex justify-content-center">Rating</div>
+                <div class="row display-7 d-flex justify-content-center pt-1">Rating</div>
                 <div class="row display-7 d-flex justify-content-center" id="rating-value"></div>
             </div>
         </div>
-        <div class="row px-1 pt-1">
+        <div class="row px-1 pt-3">
             <ul id="categories-mechanics"></ul>
         </div>
         <div class="row px-5 pt-1">
